ferritin/src/snapshots/ferritin__tests__get_crate_b_root_ai_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate_b\"), OutputMode :: Ai, &\nget_test_workspace_path ())"
---
Module crate_b — in crate-b (0.1.0)

## Modules

- prefix_inner

## Structs

- AliasedCrateAStruct
- CrateBProcessor
- PrefixCrateAAlias
- SelfPrefixAlias
