ferritin/src/snapshots/ferritin__tests__get_crate_b_root_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate_b\"), &\nget_test_workspace_path ())"
---
{
  "canonicalUrl": "https://docs.rs/crate-b/0.1.0/crate_b/index.html",
  "meta": {
    "name": "crate_b",
    "kind": "module",
    "visibility": "public",
    "definedAt": "crate_b",
    "crateName": "crate-b",
    "crateVersion": "0.1.0"
  },
  "body": {
    "kind": "module",
    "items": [
      {
        "path": "prefix_inner",
        "kind": "module",
        "url": "https://docs.rs/crate-b/0.1.0/crate_b/prefix_inner/index.html"
      },
      {
        "path": "PrefixCrateAAlias",
        "kind": "struct",
        "url": "https://docs.rs/crate-a/0.1.0/crate_a/struct.PrefixCrateAAlias.html"
      },
      {
        "path": "SelfPrefixAlias",
        "kind": "struct",
        "url": "https://docs.rs/crate-a/0.1.0/crate_a/struct.SelfPrefixAlias.html"
      },
      {
        "path": "AliasedCrateAStruct",
        "kind": "struct",
        "url": "https://docs.rs/crate-a/0.1.0/crate_a/struct.AliasedCrateAStruct.html"
      },
      {
        "path": "CrateBProcessor",
        "kind": "struct",
        "url": "https://docs.rs/crate-b/0.1.0/crate_b/struct.CrateBProcessor.html"
      }
    ]
  }
}
