ferritin/src/snapshots/ferritin__tests__get_crate_b_root_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate_b\"), OutputMode :: Plain, &\nget_test_workspace_path ())"
---
Item: crate_b
Kind: Module
Visibility: Public
Defined at: crate_b
In crate: crate-b (0.1.0)

Modules

  ◦ prefix_inner 

Structs

  ◦ CrateBProcessor 

  ◦ PrefixCrateAAlias 

  ◦ SelfPrefixAlias
