ferritin/src/snapshots/ferritin__tests__get_crate_b_root_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate_b\"), OutputMode :: TestMode, &\nget_test_workspace_path ())"
---
<metadata>
  <field name="Item">crate_b</field>
  <field name="Kind">Module</field>
  <field name="Visibility">Public</field>
  <field name="Defined at"><type-name>crate_b</type-name></field>
  <field name="In crate">crate-b (0.1.0)</field>
</metadata>
<section><section-title>Modules</section-title><list>
  <item><p>
<type-name>prefix_inner</type-name> </p>
</item>
</list>
</section><section><section-title>Structs</section-title><list>
  <item><p>
<type-name>CrateBProcessor</type-name> </p>
</item>
  <item><p>
<type-name>PrefixCrateAAlias</type-name> </p>
</item>
  <item><p>
<type-name>SelfPrefixAlias</type-name> </p>
</item>
</list>
</section>
