ferritin/src/snapshots/ferritin__tests__get_crate_root_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate\"), OutputMode :: Agent, &\nget_fixture_crate_path ())"
---
Module fixture_crate — in fixture-crate (0.1.0)

A minimal test crate for rustdoc JSON testing

## Modules

- generics — Generic-syntax edge cases, gathered here so signature rendering has a fixture for every shape rustdoc JSON can produce. [+1 lines]
- link_resolution_tests — Module for testing intra-doc link resolution
- markdown_test — Markdown: Syntax [+90 lines]
- namespace_collisions — Module for testing namespace disambiguation with kind discriminators. [+1 lines]
- prefix_tests — Edge cases for path-prefix resolution in use-item sources and intra-doc links. [+2 lines]
- private_detail — Private module whose items are accessible only via re-export. [+1 lines]
- reexport_mod
- submodule — A module with items

## Structs

- GenericStruct — A generic struct for testing multi-paragraph documentation. [+6 lines]
- MarkerOne — First implementor of Marker.
- MarkerTwo — Second implementor of Marker.
- NotThreadSafe — A type that is not thread-safe, to exercise negative auto-trait impls (!Send/!Sync, which rustdoc synthesizes for types holding a raw pointer).
- ReachableViaPrivateModule — A struct accessible only via re-export from a private module.
- SubStruct — A struct in a submodule
- TestStruct — A simple struct for testing basic functionality. [+2 lines]
- TupleStruct — A tuple struct for testing
- UnitStruct — A unit struct for testing
- Vec — A contiguous growable array type, written as Vec<T>, short for 'vector'. [+40 lines]

## Enums

- GenericEnum — A generic enum for testing [+1 lines]
- TestEnum — An enum for testing [+1 lines]

## Traits

- ComplexTrait — A more complex trait demonstrating various features
- Marker — A marker trait (no associated items) to exercise the compact implementors list — implementors with no bounds and no assoc types render comma-separated.
- TestTrait — A trait for testing extremely long documentation that exceeds line limits. [+3 lines]

## Unions

- TestUnion — A union for testing union formatting. [+1 lines]

## Functions

- async_function — An async function
- generic_function — A generic function
- private_function — A private function
- sub_function — A function in a submodule
- test_function — A public function

## Constants

- TEST_CONSTANT — A const for testing

## Statics

- TEST_STATIC — A static for testing

## Variants

- VariantA — Variant A (see also crate::GenericEnum)
- VariantB — Variant B with data
- VariantC — Variant C with struct data (name and value)
